# aws-manage-cross-acc-via-assumerole

./: .env.sample  .env.template  .gitignore  Makefile  README.md  manage.py  openapi.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
assumerole_portal/: asgi.py  settings.py  urls.py  wsgi.py
assumerole_portal/api/: cloudformation.py  crypto.py  forms.py  models.py  schema.py  services.py  urls.py  views.py
cloudformation/: README.md  cloudfront_distribution.yaml  stack.yaml  validation-stack.yaml  workload-stack.yaml
docs/: 0_api_docs.md  1_proposal.md  2_final-report.md  3_deploy-workload.md  deploy-workload.md
managed_iam/: __init__.py  __main__.py  app.py  cli.py
managed_iam/api/: __init__.py
managed_iam/config/: settings.py
managed_iam/crypto/: __init__.py  encryption.py  hashing.py  hmac.py
managed_iam/repos/: __init__.py  models.py  orgs.py
managed_iam/schemas/: __init__.py  integrate.py  orgs.py  sts.py  users.py  validate.py  validation.py
managed_iam/services/: __init__.py  idempotency.py  integration.py  orgs.py  ratelimit.py  stack.py  sts.py  users.py  validation.py  workload.py
managed_iam/storage/: __init__.py  redis.py
managed_iam_app/: __init__.py  apps.py  forms.py  openapi.py  urls.py  views.py
managed_iam_app/management/: __init__.py
managed_iam_app/views/: __init__.py  docs.py  health.py  utils.py
managed_iam_site/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/: assume_role_login.sh
templates/: base.html  portal.html
templates/docs/: swagger.html
(+13 files in other folders)
