[tool.poetry]
name = "sigmoid-aws-managed-iam-django"
version = "0.1.0"
description = "A Django-based API for configuring a Sigmoid Managed IAM Account in AWS and verifying resource access."
authors = ["Juan Lee <juan.lee@sigmoid.us>"]
readme = "README.md"
packages = [
    { include = "managed_iam" },
    { include = "managed_iam_app" },
    { include = "managed_iam_site" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.0"
redis = {version = "^5.0.3", extras = ["hiredis"]}
boto3 = "^1.34.63"
botocore = "^1.34.63"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
cryptography = "^42.0.5"
python-dotenv = "^1.0.1"
typing-extensions = "^4.11.0"
shortuuid = "^1.0.13"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
fakeredis = "^2.23.2"
freezegun = "^1.4.0"
respx = "^0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

